--- a/Backend/ToolRent/src/main/resources/application.properties
+++ b/Backend/ToolRent/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.security.oauth2.client.provider.keycloak.issuer-uri=http://localhost:9090
 
 # --- Validacion de tokens
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/sisph-realm
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
